package builder;

public class EconomyCarBuilder extends AbstractCarBuilder {

    public EconomyCarBuilder() {
        brand = "Toyota";
        model = "Corolla";
        color = "White";
        engine = "1.6";
        transmission = "Manual";
        sunroof = false;
    }
}