package builder;

public class LuxuryCarBuilder extends AbstractCarBuilder {

    public LuxuryCarBuilder() {
        brand = "BMW";
        model = "M5";
        color = "Black";
        engine = "4.4";
        transmission = "Automatic";
        sunroof = true;
    }
}